# Basic_CMake_Template

./: CMakeLists.txt  Commands_Used.txt  LICENSE  Makefile  README.md  dir_08ebf401352d0c333d3a643fc2ed36cf.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  globals.html  globals_func.html  my__lib_8cc.html  my__lib_8cc__incl.dot  my__lib_8h.html  my__lib_8h__dep__incl.dot  my__lib_8h_source.html
.github/workflows/: documentation.yaml  ubuntu.yml
app/: CMakeLists.txt  main.cc
cmake/: AddGitSubmodule.cmake  Docs.cmake
search/: all_1.js
src/my_lib/: my_lib.cc  my_lib.h
tests/: CMakeLists.txt  main.cc
